--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <title>Spinners Pizza - Grovespring Missouri</title>
-  <link rel="icon" href="https://spinners.pizza/assets/images/background/1.jpg">
+  <link rel="icon" href="https://spinners.pizza/assets/images/background/1.png">
 
   <!-- Google Fonts: Lora -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,20 +15,20 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Spinners Pizza - Grovespring Missouri">
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Call (417) 462-7746 to place an order for Delivery or Carry-out.">
-  <meta property="og:image" content="https://spinners.pizza/assets/images/background/1.jpg">
+  <meta property="og:image" content="https://spinners.pizza/assets/images/background/1.png">
   <meta property="og:url" content="https://spinners.pizza">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Spinners Pizza - Grovespring Missouri">
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Call (417) 462-7746 to place an order for Delivery or Carry-out.">
-  <meta name="twitter:image" content="https://spinners.pizza/assets/images/background/1.jpg">
+  <meta name="twitter:image" content="https://spinners.pizza/assets/images/background/1.png">
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza">
-  <link rel="apple-touch-icon" href="https://spinners.pizza/assets/images/background/1.jpg">
+  <link rel="apple-touch-icon" href="https://spinners.pizza/assets/images/background/1.png">
   <meta property="og:site_name" content="Spinners Pizza - Grovespring Missouri">
   <meta property="og:locale" content="en_US">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <link rel="icon" type="image/png" href="https://spinners.pizza/assets/images/background/1.jpg" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://spinners.pizza/assets/images/background/1.png" sizes="192x192">
   <meta name="description" content="Spinner's Pizza offers a variety of delicious pizzas, BBQ, and burgers in Grovespring, MO. Experience great food and service!">
   <meta name="keywords" content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly, local restaurants near me">
   <meta name="author" content="Spinners Pizza">
