--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <li><a href="#menu" class="hover:underline hover:text-tertiary">Menu</a></li>
           <li><a href="#reviews" class="hover:underline hover:text-tertiary">Reviews</a></li>
           <li><a href="#discounts" class="hover:underline hover:text-tertiary">Discounts</a></li>
-          <li><a href="#contact" class="hover:underline hover:text-tertiary">Contact</a></li>
+          <li><a href="#order" class="hover:underline hover:text-tertiary">Order</a></li>
         </ul>
         <button id="mobile-menu-button" class="md:hidden text-secondary hover:text-tertiary">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -243,7 +243,7 @@
         <li><a href="#menu" class="hover:underline hover:text-tertiary">Menu</a></li>
         <li><a href="#reviews" class="hover:underline hover:text-tertiary">Reviews</a></li>
         <li><a href="#discounts" class="hover:underline hover:text-tertiary">Discounts</a></li>
-        <li><a href="#contact" class="hover:underline hover:text-tertiary">Contact</a></li>
+        <li><a href="#order" class="hover:underline hover:text-tertiary">Order</a></li>
       </ul>
     </div>
   </header>
@@ -347,8 +347,8 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-12 bg-white scroll-mt-16">
+  <!-- Order Section -->
+  <section id="order" class="py-12 bg-white scroll-mt-16">
     <div class="container mx-auto px-6">
       <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8">Come on out!</h3>
       <div class="text-center">
