--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
         <h3 class="text-2xl sm:text-3xl font-bold mb-4 text-center bg-red-500 text-white py-2">Take a spin around our
           place!</h3>
         <p class="mb-6 text-base sm:text-lg">
-          Our dining area is clean, date, family, and party friendly! Our amazing staff is always top notch and ready
-          to provide a high quality service experience.
+          Our dining area is welcoming and perfect for dates, families, and parties! Our exceptional staff is dedicated to providing a top-notch, high-quality service experience.
         </p>
         <div id="gallery-images" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
           <!-- Gallery images will be inserted here with hover zoom effect -->
@@ -386,7 +385,7 @@
       </div>
     </div>
   </section>
-  <section id="about" class="py-12 scroll-mt-16">
+  <section id="about" class="scroll-mt-16">
     <div class="container mx-auto px-6">
       <h3 id="about-title" class="text-2xl sm:text-3xl font-bold mb-4 text-center bg-red-500 text-white py-2">
         About Us</h3>
@@ -429,7 +428,7 @@
     </div>
   </section>
   <!-- Reviews Section -->
-  <section id="reviews" class="py-12 bg-gray-50 scroll-mt-16">
+  <section id="reviews" class="py-12 scroll-mt-16">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4 text-center bg-red-500 text-white py-2">Customer Reviews</h3>
       <p class="text-base sm:text-lg mb-6">Read what our customers have to say!</p>
