--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Spinners Pizza - Grovespring Missouri">
   <meta property="og:description"
-    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Delivery or Carry-out.">
+    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Carry-out.">
   <meta property="og:image" content="https://spinners.pizza/assets/images/background/1.png">
   <meta property="og:url" content="https://spinners.pizza">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Spinners Pizza - Grovespring Missouri">
   <meta name="twitter:description"
-    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Delivery or Carry-out.">
+    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Carry-out.">
   <meta name="twitter:image" content="https://spinners.pizza/assets/images/background/1.png">
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza">
   <link rel="apple-touch-icon" href="https://spinners.pizza/assets/images/background/1.png">
@@ -33,7 +33,7 @@
   <meta property="og:image:height" content="630">
   <link rel="icon" type="image/png" href="https://spinners.pizza/assets/images/background/1.png" sizes="192x192">
   <meta name="description"
-    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Delivery or Carry-out.">
+    content="For delicious pizzas, bbq, burgers, and more! Call Spinners today at (417) 462-7746 to place an order for Carry-out.">
   <meta name="keywords"
     content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly, local restaurants near me, missouri">
   <meta name="author" content="Spinners Pizza">
